Changing the active player updates the display. Creating the game with the wrong number of players kills the program.